# cis1904-spring25

website/: index.html  policies.html  schedule.html
website/css/: style.css
week01/: instructions.md
week01/homework/: Exercises.hs  hw00.cabal  instructions.md
week02/: HaskellDesign.md
week02/class/: Exercises.hs  HaskellSyntax.md  stack.yaml
week02/homework/: Exercises.hs  instructions.md
week03/class/: Exercises.hs  stack.yaml
week03/homework/: Exercises.hs  hw.cabal  instructions.md
week04/: Polymorphism.md  Recursion.md
week04/class/: Exercises.hs
week04/homework/: Exercises.hs  instructions.md
week05/: HigherOrder.md
week05/class/: .hlint.yaml  Exercises.hs  HigherOrder.md
week05/homework/: .hlint.yaml  Exercises.hs  instructions.md
week06/class/: Exercises.hs  LazyEvaluation.md
week06/homework/: Exercises.hs
week07/class/: Exercises.hs  Solutions.hs  TypeClasses.md  class.cabal  stack.yaml
week07/homework/: Exercises.hs  instructions.md
week08/: Week08.pptx
week10/class/: Exercises.hs  FunctorFold.md  Solutions.hs
week10/homework/: Exercises.hs  instructions.md
week11/class/: Examples.hs  Exercises.hs  InputOutput.md
week11/homework/: Exercises.hs  instructions.md
week12/class/: Exercises.hs  Monads.md
week12/homework/: Exercises.hs  hw.cabal  instructions.md
week13/class/: Exercises.hs  PropertyBasedTesting.md  Week13.pptx
week13/homework/: BST.hs  Exercises.hs  instructions.md
week14/class/: Concurrent.hs  Exercises.hs  class.cabal
week14/homework/: instructions.md
