cabal-version:       3.12.1.0
name:                hw00
version:             0.1.0.0

common common-stanza
  ghc-options:         -Wincomplete-patterns -Wno-orphans -Wno-unused-imports
  build-depends:       base
                     , HUnit
  default-language:    Haskell2010

library
  import: common-stanza
  exposed-modules: Exercises