cabal-version:       3.8
name:                hw
version:             0.1.0.0

common common-stanza
  ghc-options:         -Wincomplete-patterns -Wno-orphans -Wno-unused-imports
  build-depends:       base
                     , HUnit
                     , silently
  default-language:    Haskell2010

library
  import: common-stanza
  exposed-modules: Exercises